crates/ruff/src/rules/flake8_import_conventions/snapshots/ruff__rules__flake8_import_conventions__tests__override_default.snap
---
source: crates/ruff/src/rules/flake8_import_conventions/mod.rs
expression: diagnostics
---
- kind:
    name: UnconventionalImportAlias
    body: "`altair` should be imported as `alt`"
    commit: ~
    fixable: false
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 13
  fix: ~
  parent: ~
- kind:
    name: UnconventionalImportAlias
    body: "`matplotlib.pyplot` should be imported as `plt`"
    commit: ~
    fixable: false
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 24
  fix: ~
  parent: ~
- kind:
    name: UnconventionalImportAlias
    body: "`numpy` should be imported as `nmp`"
    commit: ~
    fixable: false
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 12
  fix: ~
  parent: ~
- kind:
    name: UnconventionalImportAlias
    body: "`pandas` should be imported as `pd`"
    commit: ~
    fixable: false
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 13
  fix: ~
  parent: ~
- kind:
    name: UnconventionalImportAlias
    body: "`seaborn` should be imported as `sns`"
    commit: ~
    fixable: false
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 14
  fix: ~
  parent: ~
- kind:
    name: UnconventionalImportAlias
    body: "`altair` should be imported as `alt`"
    commit: ~
    fixable: false
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 21
  fix: ~
  parent: ~
- kind:
    name: UnconventionalImportAlias
    body: "`matplotlib.pyplot` should be imported as `plt`"
    commit: ~
    fixable: false
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 32
  fix: ~
  parent: ~
- kind:
    name: UnconventionalImportAlias
    body: "`numpy` should be imported as `nmp`"
    commit: ~
    fixable: false
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 18
  fix: ~
  parent: ~
- kind:
    name: UnconventionalImportAlias
    body: "`pandas` should be imported as `pd`"
    commit: ~
    fixable: false
  location:
    row: 12
    column: 0
  end_location:
    row: 12
    column: 21
  fix: ~
  parent: ~
- kind:
    name: UnconventionalImportAlias
    body: "`seaborn` should be imported as `sns`"
    commit: ~
    fixable: false
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 22
  fix: ~
  parent: ~

